re PR c++/35734 (ICE with copy constructor in derived class)

PR c++/35734
        * class.c (type_has_user_nondefault_constructor): A template
        counts as a nondefault constructor.

From-SVN: r134099